// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Push command from branch other than master shows warning that different branches are not supported 1`] = `
"[33m⚠️ Libraries pushed from branch different than master are currently not supported by UXPin Editor!
[0m
[32m✅ Library bundle uploaded successfully!
[0m[32m✅ Library metadata uploaded successfully!
[0m"
`;

exports[`Push command from master branch does not show warning that different branches are not supported 1`] = `
"
[32m✅ Library bundle uploaded successfully!
[0m[32m✅ Library metadata uploaded successfully!
[0m"
`;
